--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,32 @@
 	<title>Ejemplos.js</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/misestilos.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Bienvenidos</h1>
+	<div class="container">
+	<h1 class="texto">Calculadora IVA</h1>
+	<form action="#">
+		<div class="form-group">
+			<label>Precio Producto</label>
+			<input type="number" name="precio" id="precio">
+		</div>
+		<div class="form-group">
+			<label>IVA:(%)</label>
+			<input type="number" name="iva" id="iva" class="form-control" min="0" max="100">
+		</div>
+		<input type="button" class="btn btn-sucess" onclick="calcular_iva()" name="calcular" value="calcular">
+	</form>
+	<h2>El iva es:</h2>
+	<input disabled class="form-control" id="resultado" type="text">
 
-
+	<!--
+	<h1>Piensa Digital</h1>
+	<p class="texto">Doris Natalia Mateus Vega</p>
+	<h2 id="sede">ANDAP</h2>
+	-->
+	</div>
 	<script src="scripts/app.js"></script>
+	
 </body>
 </html>
